[project]
name = "riotfind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "s1mplist", email = "gustavopinheiro.az@outlook.com" }]
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.15",
    "langchain-openai>=0.3.2",
    "langgraph>=0.2.67",
]

[project.scripts]
riotfind = "riotfind:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain-experimental>=0.3.4",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
